--- a/share/tmux-version-switcher.yaml
+++ b/share/tmux-version-switcher.yaml
@@ -1,8 +1,8 @@
 ---
-name: tmux-perlbrew-switcher
+name: $PROGRAM
 appspec: { "version": 0.001 }
-title: tmux perlbrew switcher
-abstract: Open several perl versions in tmux panes
+title: tmux $TOOL switcher
+abstract: Open several $LANG versions in tmux panes
 
 subcommands:
   local:
@@ -10,14 +10,13 @@ subcommands:
     parameters:
     - &param_versions
       name: versions
-      summary: list of perl versions
+      summary: list of $LANG versions
       required: true
       type: string
       multiple: true
       completion:
         command_string: |
-          perlbrew list | sed -e 's/^[ *]*//'
-
+          $LIST_VERSIONS_CMD
 
   run:
     summary: Initialize panes and run code
