add apppec, completion for pyenv, rbenv
and fix plenv (versions)

--- a/share/tmux-rbenv-switcher.yaml
+++ b/share/tmux-rbenv-switcher.yaml
@@ -1,8 +1,8 @@
 ---
-name: tmux-plenv-switcher
+name: tmux-rbenv-switcher
 appspec: { "version": 0.001 }
-title: tmux plenv switcher
-abstract: Open several perl versions in tmux panes
+title: tmux rbenv switcher
+abstract: Open several ruby versions in tmux panes
 
 subcommands:
   local:
@@ -10,13 +10,13 @@ subcommands:
     parameters:
     - &param_versions
       name: versions
-      summary: list of perl versions
+      summary: list of ruby versions
       required: true
       type: string
       multiple: true
       completion:
         command_string: |
-          plenv versions | sed -e 's/^[ *]*//'
+          rbenv versions | sed -e 's/^[ *]*//'
 
 
   run:
