--- a/share/tmux-perlbrew-switcher.yaml
+++ b/share/tmux-perlbrew-switcher.yaml
@@ -5,7 +5,7 @@ title: tmux perlbrew switcher
 abstract: Open several perl versions in tmux panes
 
 subcommands:
-  local:
+  shell:
     summary: Just initialize panes with given versions
     parameters:
     - &param_versions
