--- a/share/tmux-plenv-switcher.yaml
+++ b/share/tmux-plenv-switcher.yaml
@@ -5,7 +5,7 @@ title: tmux plenv switcher
 abstract: Open several perl versions in tmux panes
 
 subcommands:
-  local:
+  shell:
     summary: Just initialize panes with given versions
     parameters:
     - &param_versions
