--- a/share/tmux-rbenv-switcher.yaml
+++ b/share/tmux-rbenv-switcher.yaml
@@ -5,7 +5,7 @@ title: tmux rbenv switcher
 abstract: Open several ruby versions in tmux panes
 
 subcommands:
-  local:
+  shell:
     summary: Just initialize panes with given versions
     parameters:
     - &param_versions
